--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "iControl LX extension to export ASM policies from trusted TMOS devices and upload them to other trusted devices",
   "scripts": {
-    "build": "bash ./inc_build.sh && npm prune --production && rm -rf build && rpmbuild --define \"main `pwd`\" --define \"_topdir %{main}/build\" -bb lx.spec"
+    "build": "bash ./inc_build.sh && npm prune --production && rm -rf build && rpmbuild --define \"main `pwd`\" --define \"_topdir %{main}/build\" --define \"_binary_filedigest_algorithm md5\" -bb lx.spec"
   },
   "author": "j.gruber@f5.com",
   "license": "Apache-2.0",
