--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TrustedASMExtensions",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "description": "iControl LX extension to export ASM policies from trusted TMOS devices and upload them to other trusted devices",
   "scripts": {
@@ -8,6 +8,8 @@
   },
   "author": "j.gruber@f5.com",
   "license": "Apache-2.0",
-  "dependencies": {},
+  "dependencies": {
+    "xml-js": "^1.6.9"
+  },
   "devDependencies": {}
 }
